Move server.ts to backend directory to fix Render build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,5 @@
     "baseUrl": "."
   },
   "include": ["**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "backend/**"]
 }
