--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "server": "tsx server.ts",
-    "start": "tsx server.ts"
+    "server": "tsx backend/server.ts",
+    "start": "tsx backend/server.ts"
   },
   "dependencies": {
     "@google/genai": "^0.2.0",
