--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
   },
   "dependencies": {
     "@google/genai": "^0.2.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "better-sqlite3": "^12.5.0",
     "canvas-confetti": "^1.9.2",
     "cors": "^2.8.5",
     "express": "^5.2.1",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vite": "^7.3.0"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
@@ -31,7 +33,6 @@
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
-    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.18",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
