--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@google/genai": "^0.2.0",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.89.0",
     "@vitejs/plugin-react": "^4.2.1",
     "canvas-confetti": "^1.9.2",
