--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,43 @@
+# Dependencies
+node_modules/
+.pnp
+.pnp.js
 
-node_modules
-dist
+# Testing
+coverage/
+
+# Production
+dist/
+build/
+
+# Misc
+.DS_Store
 .env
-database.json
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-.vercel
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# OS
+Thumbs.db
