--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "npm install && vite build",
     "preview": "vite preview",
     "server": "tsx backend/server.ts",
-    "start": "tsx backend/server.ts"
+    "start": "tsx backend/server.ts",
+    "backend": "tsx backend/server.ts"
   },
   "dependencies": {
     "@google/genai": "^0.2.0",
@@ -25,7 +26,8 @@
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "vite": "^7.3.0"
+    "vite": "^7.3.0",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "@types/canvas-confetti": "^1.6.4",
