--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "@vitejs/plugin-react": "^4.2.1",
     "canvas-confetti": "^1.9.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^5.2.1",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "vite": "^7.3.0",
-    "dotenv": "^16.4.5"
+    "vite": "^7.3.0"
   },
   "devDependencies": {
     "@types/canvas-confetti": "^1.6.4",
