Fix backend auth and OAuth redirect; add service role usage; UUID fix; env example updates; auth callback refresh

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,22 @@
-# Supabase Configuration
+# Supabase Configuration (Backend)
 # Get these values from your Supabase project dashboard
 SUPABASE_URL=your_supabase_project_url
 SUPABASE_ANON_KEY=your_supabase_anon_key
+# For server-side admin operations (profile updates)
+SUPABASE_SERVICE_ROLE_KEY=your_service_role_key
 
-# Optional: Google AI API Key for AI features
-GOOGLE_AI_API_KEY=your_google_ai_api_key
+# Supabase Configuration (Frontend - Vite)
+VITE_SUPABASE_URL=your_supabase_project_url
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
+
+# Google/Gemini API Key (Frontend and Backend)
+# Frontend uses VITE_GEMINI_API_KEY, backend uses GEMINI_API_KEY
+VITE_GEMINI_API_KEY=your_google_ai_api_key
+GEMINI_API_KEY=your_google_ai_api_key
 
 # Optional: Custom backend URL (defaults to http://localhost:3001 in development)
 VITE_API_BASE=http://localhost:3001
+
+# OAuth Redirects to configure in Supabase (not an env var, just guidance):
+# http://localhost:5173/auth/callback
+# https://your-production-domain/auth/callback
