chore: fix deploy config and frontend html
- Remove broken importmap and missing /index.css reference
- Add .node-version and NODE_VERSION for Node 20 on Render
- Do not hardcode PORT in render.yaml (use Render-provided PORT)

--- a/render.yaml
+++ b/render.yaml
@@ -7,6 +7,8 @@ services:
     envVars:
       - key: NODE_ENV
         value: production
+      - key: NODE_VERSION
+        value: 20
     # Add your environment variables in Render dashboard:
     # SUPABASE_URL
     # SUPABASE_ANON_KEY
