Fix authentication and remove local storage usage
- Add missing isSupabaseConfigured export to fix build errors
- Remove localStorage onboarding usage, move to Supabase user metadata
- Remove 'Continue without account' button to enforce authentication
- Fix TypeScript errors in StoredUser interface and LearnMode
- Update savePreferences to support onboardingDone parameter
- All builds and TypeScript checks now pass
- Ready for deployment with full auth enforcement

--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "build": "npm install && vite build",
     "preview": "vite preview",
     "server": "tsx backend/server.ts",
-    "start": "tsx backend/server.ts",
-    "backend": "tsx backend/server.ts"
+    "start": "tsx backend/server.ts"
   },
   "dependencies": {
     "@google/genai": "^0.2.0",
@@ -22,14 +21,12 @@
     "@vitejs/plugin-react": "^4.2.1",
     "canvas-confetti": "^1.9.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
     "express": "^5.2.1",
-    "framer-motion": "^12.23.26",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tsx": "^4.21.0",
-    "vite": "^7.3.0"
+    "vite": "^7.3.0",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "@types/canvas-confetti": "^1.6.4",
@@ -41,6 +38,7 @@
     "autoprefixer": "^10.4.18",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.21.0",
     "typescript": "^5.3.3",
     "vite": "^7.3.0"
   }
